[package]
name = "raytracer"
version = "0.0.1"
authors = ["J"]

[dependencies]
roots = "^0" # crate for various mathematical functions
nalgebra = "^0" # matrix calculations

gtk = "^0" # GUI

#vulkano = "^0" # Vulkan API bindings

glib = "^0"		# These
gdk = "^0" 		# might
gdk-pixbuf = "^0"	# not be
cairo-rs = "^0"		# necessary
